most viewed pages

--- a/scripts/config.json
+++ b/scripts/config.json
@@ -1,5 +1,6 @@
 {
-  "User-Agent": "",
+  "User-Agent": "_",
   "start_date": "20160101",
-  "end_date": "20200101"
+  "end_date": "20200101",
+  "top_pages_path": "~/ML_DATA/wikipedia_page_views/top_pages"
 }
